--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
 main {
     margin: 0 auto;
     max-width: 70%;
+    -webkit-box-shadow: 2px 4px 15px 6px rgba(0,0,0,0.18); 
+    box-shadow: 2px 4px 15px 6px rgba(0,0,0,0.18);
+    border-radius: 13px;
 }
 .price {
     padding: 50px;
@@ -73,6 +76,8 @@ main {
     border: none;
     border-radius: 5px;
     margin-top: 16px;
+    -webkit-box-shadow: 2px 4px 15px 6px rgba(0,0,0,0.18); 
+    box-shadow: 2px 4px 15px 6px rgba(0,0,0,0.18);
 }
 .signupsec .why {
     background-color: hsl(179, 47%, 52%);
