--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 62%;
+    width: 60%;
     margin-bottom: 10px;
 }
 .signupsec .monthlysub h1 small{
@@ -111,6 +111,7 @@ main {
         margin-top: 0;
         color: var(--Cyan);
         font-size: 17px;
+        width: 40%;
     }
     .price > h2 {
         margin-top: 22px;
@@ -125,7 +126,7 @@ main {
     }
     .signupsec .monthlysub {
         padding: 16px;
-    width: fit-content;
+        width: auto;
     border-radius: 0;
     }
     .signupsec .why {
